coral-component-select/src/styles/index.styl
/*
 * ADOBE CONFIDENTIAL
 *
 * Copyright 2018 Adobe
 * All Rights Reserved.
 *
 * NOTICE:  All information contained herein is, and remains
 * the property of Adobe and its suppliers,
 * if any.  The intellectual and technical concepts contained
 * herein are proprietary to Adobe and its
 * suppliers and may be covered by U.S. and Foreign Patents,
 * patents in process, and are protected by trade secret or copyright law.
 * Dissemination of this information or reproduction of this material
 * is strictly forbidden unless prior written permission is obtained
 * from Adobe.
 */

@require '@adobe/spectrum-css/dist/components/dropdown/index.css';
@require '@adobe/spectrum-css/dist/components/dropdown/multiStops/light.css';
@require '@adobe/spectrum-css/dist/components/dropdown/multiStops/lightest.css';
@require '@adobe/spectrum-css/dist/components/dropdown/multiStops/dark.css';
@require '@adobe/spectrum-css/dist/components/dropdown/multiStops/darkest.css';

coral-select-item {
  display: none;
}

._coral-Dropdown {
  ._coral-Dropdown-tagList {
    display: none;
  }

  ._coral-Dropdown-select {
    position: absolute;
    top: 0;
    left: 0;

    display: none;

    width: 100%;
    height: 32px;

  // allows the size to match the size of the button
    -webkit-appearance: none;
    -moz-appearance: none;
  }

  ._coral-Dropdown-trigger {
    ._coral-Dropdown-label > coral-icon:first-child {
      vertical-align: text-top;
      margin-right: 8px;
      margin-top: 0;
      margin-bottom: 0;
    }
  }

// @spectrum
  ._coral-Icon:not(._coral-Dropdown-icon) {
    margin-left: 0;
  }

  ._coral-Dropdown-invalidIcon:not(._coral-Dropdown-icon) {
    margin-left: 12px;
  }
}

._coral-Dropdown--native {
  ._coral-Dropdown-select {
    display: block;
    opacity: 0.01;
  }
}

